  the full content of a precompiled header. This can save time for large
  precompiled headers. Note that the build system needs to keep the checksum
  file in sync with the precompiled header for this to work.

- Added ``stats updated'' timestamp in `ccache -s` output. This can be useful
  if you wonder whether ccache actually was used for your last build.

- The content of the `-fsanitize-blacklist` file is now included in the hash,
  so updates to the file will now correctly result in separate cache entries.


Other
~~~~~

- It's now possible to opt out of building and installing man pages when
  running `make install` in the source repository.


ccache 3.4.3
-----------
Release date: unknown

Bug fixes
~~~~~~~~~

- Fixed a race condition when creating the initial config file in the cache
  directory.


ccache 3.4.2
------------
Release date: 2018-03-25

Bug fixes
~~~~~~~~~

- The cleanup algorithm has been fixed to not misbehave when files are removed
  by another process while the cleanup process is running. Previously, too many
  files could be removed from the cache if multiple cleanup processes were
  triggered at the same time, in extreme cases trimming the cache to a much
  smaller size than the configured limits.

- Correctly hash preprocessed headers located in a ``.gch directory''.
  Previously, ccache would not pick up changes to such precompiled headers,
  risking false positive cache hits.

- Fixed build failure when using the bundled zlib sources.

- ccache 3.3.5 added a workaround for not triggering Clang errors when a
  precompiled header's dependency has an updated timestamp (but identical
  content). That workaround is now only applied when the compiler is Clang.

- Made it possible to perform out-of-source builds in dev mode again.


ccache 3.4.1
------------
Release date: 2018-02-11

Bug fixes
~~~~~~~~~

- Fixed printing of version number in `ccache --version`.


ccache 3.4
----------
Release date: 2018-02-11

New features and enhancements